--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>在线视频2</title>
+    <title>静态全屏嵌入网站</title>
     <style>
         /* 设置整个页面的样式 */
         html, body {
@@ -23,6 +23,6 @@
 </head>
 <body>
     <!-- 使用 iframe 嵌入外部网站 -->
-    <iframe src="http://1.34.1008b.icu/mn" frameborder="0" allowfullscreen></iframe>
+    <iframe src="http://1.34.1008b.icu/mn" frameborder="0"></iframe>
 </body>
 </html>
