--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>静态全屏嵌入网站</title>
+    <title>静态全屏嵌入网站2</title>
     <style>
         /* 设置整个页面的样式 */
         html, body {
