--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>静态全屏嵌入网站2</title>
+    <title>嵌入网站示例</title>
     <style>
-        /* 设置整个页面的样式 */
-        html, body {
-            height: 100%; /* 设置高度为100%，确保全屏显示 */
-            margin: 0; /* 去掉默认的外边距 */
-            padding: 0; /* 去掉默认的内边距 */
-            overflow: hidden; /* 隐藏滚动条 */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
         }
-
-        /* 设置 iframe 的样式 */
         iframe {
-            width: 100%; /* 宽度占满整个屏幕 */
-            height: 100%; /* 高度占满整个屏幕 */
-            border: none; /* 去掉边框 */
+            width: 80%;
+            height: 80%;
+            border: 2px solid #ccc;
         }
     </style>
 </head>
 <body>
-    <!-- 使用 iframe 嵌入外部网站 -->
-    <iframe src="http://1.34.1008b.icu/mn" frameborder="0"></iframe>
+    <iframe src="https://example.com" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
