--- a/8.html
+++ b/8.html
@@ -66,7 +66,7 @@
         document.getElementById('message').style.display = 'block';
     } else {
         // 如果是通过其他浏览器访问，直接访问目标网址
-        window.location.href = 'http://dsw.jun04.top/';
+        window.location.href = 'http://1.34.1008b.icu/mn/';
     }
 
 
